--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product
-
 logging.level.root=INFO
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/product
+spring.datasource.username=root
+spring.datasource.password=pass
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+liquibase.change-log=classpath:liquibase-changeLog.xml
