--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+api-header-name=API_KEY
+api-header-value=FGYSJNBJ
+
 logging.level.root=INFO
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
