--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+eureka.server.enableSelfPreservation=false
+
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
 logging.level.root=INFO
