--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 api-header-name=API_KEY
 api-header-value=FGYSJNBJ
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.leaseRenewalIntervalInSeconds=1
+eureka.instance.leaseExpirationDurationInSeconds=2
+
 logging.level.root=INFO
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port=0
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/product
 spring.datasource.username=root
 spring.datasource.password=pass
@@ -13,4 +18,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
-liquibase.change-log=classpath:liquibase-changeLog.xml
+spring.liquibase.change-log=classpath:liquibase-changeLog.xml
