<Abhilash 4/12/2019> Enabled fallback using Hystrix.
Updated pom dependency versions.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.leaseRenewalIntervalInSeconds=1
 eureka.instance.leaseExpirationDurationInSeconds=2
 
+feign.hystrix.enabled=true
+
 logging.level.root=INFO
 
+management.server.port=0
 server.port=0
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
