<Abhilash 4/12/2019> Updated pom dependency versions.
Minor code refactoring.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ eureka.instance.leaseExpirationDurationInSeconds=2
 
 logging.level.root=INFO
 
+management.server.port=0
 server.port=0
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
