--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ logging.level.root=INFO
 
 server.port=0
 
+spring.zipkin.base-url=http://localhost:8762/
+spring.sleuth.sampler.probability=1
+
 zuul.prefix=/api
 zuul.ignoredServices=*
 
