--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ logging.level.root=INFO
 management.server.port=0
 server.port=0
 
+spring.zipkin.base-url=http://localhost:8762/
+spring.sleuth.sampler.probability=1
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/product
 spring.datasource.username=root
